added Material design

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,25 @@
-$body-bg: #34495e;
+$body-bg: #002133;
+
+.mainContentAbout {
+
+    background-color: white;
+    padding: 100px;
+    
+
+}
+
+.headerText {
+
+padding-left: 100px;
+
+}
+
+.jumbotron {
+
+margin: 20px;
+border-radius: 5px;
+    
+}
 
 @import 'bootstrap';
+
