--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,13 @@
-<p>Testing about page</p>
+
+<div class="mainContentAbout">
+
+    
+<h3>Using the latest CCTV live-feed and car park payment technology – such as GPS, internet and mobile payment options.</h3>
+    
+    
+    
+    
+<p>CP Plus believes in using the very latest car park management technology, so we offer clients the best possible parking solution. Technology is constantly changing and developing and it is vital that we keep up-to-date with what is available.</p>
+    
+    
+</div>
