--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 
 
 <div class= "jumbotron">
-        <h1>CP+ Parking</h1>
+        
+    <div class="headerText">
+    <h1>CP+ Parking</h1>
         <p>Click here to <%= link_to "sign up", "#", class: "btn btn-primary btn-lg" %></p>
-
+        </div>
 </div>
