removed material design

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -21,5 +21,24 @@ border-radius: 5px;
     
 }
 
+
+body {
+background-color:black;
+
+}
+
+ul {
+list-style-type: none;
+
+
+}
+
+li {
+
+    text-decoration: none;
+list-style-type: none;
+}
+
 @import 'bootstrap';
+
 
